[package]
name = "bevy_drm"
description = "Direct Rendering Manager (DRM) rendering plugin for Bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
# bevy = { version = "0.18", features = ["bevy_log", "bevy_window"] }
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "543b305", features = ["bevy_log", "bevy_window"] }
drm = "0.14.2"
raw-window-handle = "0.6.2"

[patch.crates-io]
wgpu = { git = "https://github.com/rectalogic/wgpu.git", branch = "drm-28" }
wgpu-core = { git = "https://github.com/rectalogic/wgpu.git", branch = "drm-28" }
wgpu-hal = { git = "https://github.com/rectalogic/wgpu.git", branch = "drm-28" }
wgpu-types = { git = "https://github.com/rectalogic/wgpu.git", branch = "drm-28" }
naga = { git = "https://github.com/rectalogic/wgpu.git", branch = "drm-28" }
naga_oil = { git = "https://github.com/bevyengine/naga_oil.git", rev = "e349f54" }

[dev-dependencies]
# bevy = { version = "0.18", default-features = true }
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "543b305", default-features = true }
